k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ciudad-robot
  labels:
    app.kubernetes.io/part-of: ciudad-robot
